# google-agentops-demo

./: README.md  pyproject.toml
.github/workflows/: ci.yml  register-revka-workflow.yml  revka-issue-trigger.yml
.revka/workflows/: github-issue-resolver.yaml
scripts/: build_revka_payload.py  register_revka_workflow.py
src/agentops_demo/: __init__.py  __main__.py  cart.py
tests/: test_cart.py
