[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "google-agentops-demo"
version = "0.1.0"
description = "Tiny demo project for GitHub issue to Revka bug-fix automation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "KumihoIO" }]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
addopts = ["-p", "no:asyncio"]
pythonpath = ["src"]
testpaths = ["tests"]
